# cargo-stable-public-api-lints

./: Cargo.toml  README.md
.github/workflows/: build.yml  lints.yml
src/: main.rs
src/passes/: drop.rs  non_exhaustive.rs  sorted_enum.rs
tests/: run.rs
tests/drop/: Cargo.toml
tests/drop/src/: lib.rs
tests/non_exhaustive/: Cargo.toml
tests/non_exhaustive/src/: enum_allow.rs  enum_fixed.rs  enum_warn.rs  lib.rs  struct_allow.rs  struct_fixed.rs  struct_warn.rs
tests/snapshots/: run__drop_struct_warn.snap  run__non_exhaustive_enum_allow.snap  run__non_exhaustive_enum_fixed.snap  run__non_exhaustive_enum_warn.snap  run__non_exhaustive_struct_allow.snap  run__non_exhaustive_struct_fixed.snap  run__non_exhaustive_struct_warn.snap  run__sorted_enum.snap
tests/sorted_enum/: Cargo.toml
tests/sorted_enum/src/: lib.rs
