[package]
name = "cargo-stable-public-api-lints"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
public-api = "0.47"
rustdoc-json = "0.9.6"
rustdoc-types = "0.39" # needs to match public-api
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
insta = "1.43.1"
